<?xml version="1.0"?>

<package>
  <name>apriltags_meta</name>
  <version>0.1.2</version>
  <description>A meta package for apriltags_ros </description>
  <maintainer email="-">jungr-ait</maintainer>

  <author>jungr-ait</author>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/apriltags_ros</url>
  <url type="bugtracker">https://github.com/RIVeR-Lab/apriltags_ros/issues</url>
  <url type="repository">https://github.com/RIVeR-Lab/apriltags_ros</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>apriltags_ros</build_depend>
  <build_depend>gscam</build_depend>
  <run_depend>gscam</run_depend>
  <run_depend>apriltags_ros</run_depend>
</package>
